--- a/6_cap2.tex
+++ b/6_cap2.tex
@@ -48,7 +48,7 @@ Una mejor ilustración de este hecho viene representada en la Fig. \ref{fig:supp
 \begin{figure}[!htb]
 	%TODO: hacer un replot de la figura
 	\centering
-	\includegraphics[width=0.75\linewidth]{figures/suppl_otoad}
+	\includegraphics[width=\linewidth]{figures/suppl_otoad}
 	\caption{Densidad de probabilidad de las muestras de O y de la EA a lo largo del eje de PC1. Cada panel es para un intervalo de edad para las muestras de O. La probabilidad de la EA, la cual es aproximadamente independiente de la edad, es mostrada en los cuatro paneles. Tomada de la referencia \cite{Gonzalez_2021}.}
 	\label{fig:supplotoad}
 \end{figure}
