--- a/1_titlepage.tex
+++ b/1_titlepage.tex
@@ -72,7 +72,7 @@ Departamento de Física Teórica
 %{\LARGE \bfseries \MakeUppercase{Una vista panorámica a los atractores homeostático, Alzheimer y Glioblastoma} %[5pt] %\MakeUppercase{}
 %}
 
-{\LARGE \bfseries \MakeUppercase{Exploración de los atractores homeostático, Alzheimer y Glioblastoma} %[5pt] %\MakeUppercase{}
+{\LARGE \bfseries \MakeUppercase{ Envejecimiento, Alzheimer y Glioblastoma en el espacio de expresión genética} %[5pt] %\MakeUppercase{}
 }
 
 
