--- a/Tesis.tex
+++ b/Tesis.tex
@@ -117,6 +117,8 @@
 	\input{./3_abstract}
 	
     \pagestyle{empty}%fancy
+    
+    % TODO: añadir una página donde se detallen los trabajos realizados, dividida en 3 secciones. La primera con las publicaciones directamente relacionandas con la tesis, como el paper de scientific reports y el de heliyon. La segunda con artículos no relacionados con la tesis y la tercera sección con trabajos en proceso de publicación
 
     \singlespacing
     \tableofcontents
