--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -5,7 +5,7 @@
 \addcontentsline{toc}{chapter}{Introducción}
 \onehalfspacing
 
-El \textit{fitness} celular refiere a la capacidad de una célula de sobrevivir y proliferar en un ambiente determinado. Abarca varios factores como la capacidad de la célula para adaptarse al ambiente, resistir al estrés y mantener la homeostasis. Este concepto es particularmente importante en la biología del cáncer, donde los niveles de de \textit{fitness} celular pueden determinar su supervivencia y dominancia dentro de un tejido.
+El \textit{fitness} celular refiere a la capacidad de una célula de sobrevivir y proliferar en un ambiente determinado. Abarca varios factores como la capacidad de la célula para adaptarse al ambiente, resistir al estrés y mantener la homeostasis. Este concepto es particularmente importante en la biología del cáncer, donde los niveles de \textit{fitness} celular pueden determinar su supervivencia y dominancia dentro de un tejido.
 
 Un paradigma conocido en la biología molecular expresa que los máximos locales de \textit{fitness}, en el espacio de expresión genética, están relacionados con estados biológicos accesibles. Un diagrama de Wright es una representación gráfica reducida del panorama genético, donde los picos y valles representan diferentes genotipos y sus niveles relativos de \textit{fitness} \cite{wright1932roles}, ver Fig. \ref{fig:wrightDiagram}. 
 
@@ -45,7 +45,7 @@ El trabajo presentado como tesis de diploma consta de una introducción, tres ca
 	
 	\item[$\bullet$] \textbf{Capítulo 2:} Se centra en la construcción y análisis del diagrama de tres atractores que emergen en el espacio de expresión genética. Mediante técnicas de reducción dimensional se visualizan las posiciones relativas de estos atractores y se observa cómo las muestras de tejido se desplazan de un estado a otro. Además, se introduce un panorama del fitness celular a través de un diagrama de Wright que ilustra las barreras y la fuerza relativa de cada atractor, enfatizando las diferencias en la transición de un estado a otro.
 	
-	\item[$\bullet$] \textbf{Capítulo 3:} Presenta los resultados obtenidos del análisis de los datos de expresión genética. En este capítulo se destacan, por un lado, los hallazgos cualitativos, en los que se identifican claramente los atractores asociados al estado normal, al glioblastoma y a la enfermedad de Alzheimer, evidenciando las trayectorias y transiciones entre estos estados; y, por otro lado, se ofrece una perspectiva cuantitativa, respaldada por representaciones gráficas y análisis estadísticos, que valida la inversa relación entre el glioblastoma y el Alzheimer y resalta el papel del envejecimiento en estas transiciones.
+	\item[$\bullet$] \textbf{Capítulo 3:} Presenta los resultados obtenidos del análisis de los datos de expresión genética. En este capítulo se destacan, por un lado, los hallazgos cualitativos, en los que se identifican claramente los atractores asociados al estado normal, al glioblastoma y a la enfermedad de Alzheimer, evidenciando las trayectorias y transiciones entre estos estados; y, por otro lado, se ofrece una perspectiva cuantitativa, respaldada por representaciones gráficas y análisis estadísticos, que valida la relación inversa entre el glioblastoma y el Alzheimer y resalta el papel del envejecimiento en estas transiciones.
 	
 	\item[$\bullet$] \textbf{Conclusiones:} Se sintetiza como el análisis de la expresión génica en la materia blanca del cerebro permite identificar tres atractores y ponen de manifiesto una relación inversa entre el desarrollo del glioblastoma y la aparición del Alzheimer. 
 	
