--- a/3_abstract.tex
+++ b/3_abstract.tex
@@ -24,6 +24,8 @@
 \vfill
 \cleardoublepage
 
+\selectlanguage{english}
+
 \begin{center}
 \section*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
@@ -37,6 +39,8 @@
 
 
 \end{quote}
+
+\selectlanguage{spanish}
 
 \vfill
 \cleardoublepage
