--- a/2_dedicatoria.tex
+++ b/2_dedicatoria.tex
@@ -7,18 +7,26 @@
 
 \vfill
 
+%\begin{quote}
+%\begin{flushright}
+%%	\textit{A veces, aceptar ayuda cuesta m\'as que ofrecerla.}\\
+%%	\textit{Luminara Undulis}
+%	\textit{Lo que sabemos es una gota de agua;}\\
+%	\textit{lo que ignoramos es el océano.}\\
+%	\textit{Isaac Newton}
+%\end{flushright}
+%\end{quote}
+
 \begin{quote}
 \begin{flushright}
-%	\textit{A veces, aceptar ayuda cuesta m\'as que ofrecerla.}\\
-%	\textit{Luminara Undulis}
-	\textit{Lo que sabemos es una gota de agua;}\\
-	\textit{lo que ignoramos es el océano.}\\
-	\textit{Isaac Newton}
+	%	\textit{A veces, aceptar ayuda cuesta m\'as que ofrecerla.}\\
+	%	\textit{Luminara Undulis}
+	\textit{La simplicidad es la máxima sofisticación.}\\
+	\textit{Leonardo da Vinci}
 \end{flushright}
-
-
-
 \end{quote}
+
+
 
 \vfill
 \cleardoublepage
