--- a/6_cap2.tex
+++ b/6_cap2.tex
@@ -17,7 +17,7 @@ Nuestro punto de partida es el diagrama de los datos de expresión genética del
 		Análisis de componentes principales para los datos de expresión genética.}
 \end{figure}
 
-En la figura se pueden apreciar 4 grupos de muestras. Las muestras marcadas como N y GB corresponden, a especímenes patológicamente normales y tumorales en los datos del TCGA para el glioblastoma \cite{Brennan_2013}. Los centros de las nubes de muestras de N y GB en el espacio de expresión genética definen, respectivamente, los atractores Normal (homeostático) y Glioblastoma de Kauffman \cite{Huang_2009, Gonzalez_2023}. De hecho, la acumulación de puntos en una determinada región de este espacio indica que esta es un atractor de la red de regulación Genética que gobierna la dinámica del sistema.
+En la figura se pueden apreciar 4 grupos de muestras. Las muestras marcadas como N y GB corresponden, a especímenes patológicamente normales y tumorales en los datos del TCGA para el glioma \cite{Brennan_2013}. Los centros de las nubes de muestras de N y GB en el espacio de expresión genética definen, respectivamente, los atractores Normal (homeostático) y Glioblastoma de Kauffman \cite{Huang_2009, Gonzalez_2023}. De hecho, la acumulación de puntos en una determinada región de este espacio indica que esta es un atractor de la red de regulación Genética que gobierna la dinámica del sistema.
 
 Por otro lado, los grupos etiquetados como EA y O corresponden a las muestras de la materia blanca del cerebro de la enfermedad del Alzheimer y del grupo de control (\textit{old}) en el estudio del Instituto Allen \cite{Miller_2017}. 
 
@@ -25,7 +25,6 @@ La Fig. \ref{fig:pcaotoad} es una reconstrucción de la figura 3a de la referenc
 %\alert{Estudiamos la transición de O hacia EA en la referencia \cite{Gonzalez_2021}}. En la Fig. \ref{fig:otoad}
 
 \begin{figure}[!htb]
-	%TODO:
 	\centering
 	\includegraphics[width=0.75\linewidth]{figures/pca_o_to_ad_1}
 	\caption{ Análisis de componentes principales de los datos de expresión genética del Instituto Allen de la materia blanca del cerebro. Se representan las muestras de O y la EA. Las elipses discontinuas se dibujan de acuerdo con las desviaciones estándar de cada conjunto. Tomada de la referencia \cite{Gonzalez_2021}.}
