--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -82,7 +82,7 @@ Solo existen cuatro posibilidades para el destino de las trayectorias aleatorias
 
 Debido al elevado valor de \textit{fitness} del atractor GB, debería existir una probabilidad relativamente alta de que las trayectorias sean capturadas por el GB, lo que conduce a la iniciación de un tumor. Esto implica un enorme aumento del \textit{fitness}, la propagación del tumor en el cerebro y una esperanza de vida para el individuo de tan solo unos dos años tras la iniciación \cite{Poon_2020}. Esto podría afectar a los individuos en edad reproductiva. Por lo tanto, evitar el atractor GB podría ser objeto de la presión selectiva.
 
-Como comprobación indirecta, podemos comparar las incidencias de GB y la EA. Estas deberían ser proporcionales a las tasas de captura de trayectorias aleatorias por los atractores de GB y EA. Como se mencionó, en un modelo donde la dirección de los saltos es aleatoria, la incidencia de GB debería ser mucho mayor que la de la EA. Sin embargo, la incidencia global de glioblastoma es inferior a 10 por 100 000 personas \cite{Ohgaki2005}, en contraste con el 5 \% de la EA en personas de 65 a 74 años y el 13 \% en personas de 75 a 84 años \cite{alz2023}. La incidencia observada sugiere que se evita el movimiento hacia el centro de GB.
+Como comprobación indirecta, podemos comparar las incidencias de GB y la EA. Estas deberían ser proporcionales a las tasas de captura de trayectorias aleatorias por los atractores de GB y EA. Como se mencionó, en un modelo donde la dirección de los saltos es aleatoria, la incidencia de GB debería ser mucho mayor que la de la EA. Sin embargo, la incidencia global del glioma es inferior a 10 por 100 000 personas \cite{Ohgaki2005}, en contraste con el 5 \% de la EA en personas de 65 a 74 años y el 13 \% en personas de 75 a 84 años \cite{alz2023}. La incidencia observada sugiere que se evita el movimiento hacia el centro de GB.
 
 \begin{enumerate}
 	\item[5.] \textbf{La aparición tardía de la EA podría ser el resultado de la captura por parte del atractor de la EA de microestados cerebrales envejecidos.}
