--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -32,7 +32,7 @@ El estudio realizados por C. Lanni y colaboradores en la referencia \cite{Lanni_
 % TODO: Tal vez pueda hablar un poco más del proceso de envejecimiento y de la teoría del envejecimiento programado
 Muchas de estas investigaciones no solo muestran una oposición entre la EA y el GB, sino que también señalan el envejecimiento como un factor de riesgo común para ambas enfermedades \cite{Driver_2012, Musicco_2013 , Liu_2013, Lanni_2020, A_Driver_2010}. Esta compleja relación entre ambas enfermedades cerebrales queda representada en nuestro diagrama de Wright. Además, se puede apreciar un camino o corredor hacia el envejecimiento normal, en línea con la teoría del envejecimiento programado \cite{Magalh_es_2012, 	Gems_2022}.
 
-A nivel genético, hay genes que varían de la misma manera en los procesos de envejecimiento, progresión al cáncer y la EA, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GB. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión génica de su referencia en el tejido normal pueden indicar una progresión potencial a la EA (subexpresión) o al GB (sobreexpresión).
+A nivel genético, hay genes que varían su expresión de la misma manera en los procesos de envejecimiento, progresión al cáncer y la EA, mientras que también hay genes que indican una situación disyuntiva entre la EA y el GB. Un ejemplo de este último es el gen codificador de proteínas MMP9, que juega un papel importante en la invasión tumoral \cite{Choe2002, Xue_2017}, pero también conocido como neuroprotector, controlando las interacciones entre axones y fibras beta-amiloide \cite{Kaminari_2017}. Las desviaciones del valor de expresión genética de su referencia en el tejido normal pueden indicar una progresión potencial a la EA (subexpresión) o al GB (sobreexpresión).
 
 Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GB, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
 
