--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -13,11 +13,11 @@ Sobre la base de nuestros diagramas, podemos formular las siguientes observacion
 	\item  \textbf{Existe una dirección en el espacio de expresión genética, que a grandes rasgos se puede identificar con el eje PC1, asociada al envejecimiento y a un aumento del riesgo de padecer GB y la EA.}
 \end{enumerate}
 
-De hecho, el desplazamiento en esta dirección implica escalar parcialmente las barreras de bajo \textit{fitness} que separan N de los estados GB y EA, y por lo tanto aumentar el riesgo tanto para GB como para la EA.
+De hecho, el desplazamiento en esta dirección implica escalar parcialmente las barreras de bajo \textit{fitness} que separa N de los estados GB y EA, y por lo tanto aumentar el riesgo tanto para GB como para la EA.
 
 Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario.% \alert{El procedimiento es similar al algoritmo de Page Rank \cite{Duhan_2009}. Lo usamos en nuestro trabajo anterior \cite{Gonzalez_2023}.}
 
-En la Tabla \ref{tab:apx3} de los apéndices se encuentra una lista con los 100 primeros genes del \textit{ranking}. En la Fig. \ref{fig:figpc1} se representan los 30 primeros genes ordenados por su valor absoluto. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
+En la Tabla \ref{tab:apx3} de los apéndices se encuentra una lista con los 100 primeros genes del \textit{ranking}. En la Fig. \ref{fig:figpc1} se representan los valores de los 30 primeros genes en el vector PC1 ordenados por su valor absoluto. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
 
 \begin{figure}[!htb]
 	\centering
